feat(api): create regions and sectors, upload region covers
