# packages/api/src/index.ts
@@ -18,7 +18,9 @@ export type RouteMedia = components['schemas']['MediaDto'];
 export type CreateRouteMedia = components['schemas']['CreateMediaDto'];
 export type RouteLine = components['schemas']['RouteLineDto'];
 export type UpdateRegion = components['schemas']['UpdateRegionDto'];
+export type CreateRegion = components['schemas']['CreateRegionDto'];
 export type UpdateSector = components['schemas']['UpdateSectorDto'];
+export type CreateSector = components['schemas']['CreateSectorDto'];
 export type UpdateRoute = components['schemas']['UpdateRouteDto'];
 export type CreateRoute = components['schemas']['CreateRouteDto'];
 export type UpdateTopo = components['schemas']['UpdateTopoDto'];
